--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -3,9 +3,9 @@ name: Flake8 Lint
 
 on:
   push:
-    branches: [main]
+    branches: ["*"]
   pull_request:
-    branches: [main]
+    branches: ["*"]
 
 jobs:
   lint:
