--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -22,11 +22,11 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m venv venv
-          source venv/bin/activate
+          python -m venv .venv
+          source .venv/bin/activate
           pip install -r requirements.txt
 
       - name: Run Flake8
         run: |
-          source venv/bin/activate
+          source .venv/bin/activate
           flake8 .
