--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,3 +30,7 @@ exclude = '''
 [tool.ruff.lint.isort]
 known_first_party = ["leaffliction"]
 force_sort_within_sections = true
+
+[tool.isort]
+known_first_party = ["leaffliction"]
+force_sort_within_sections = true
