--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ h11==0.14.0
 httpcore==1.0.6
 httpx==0.27.2
 idna==3.10
+iniconfig==2.0.0
 ipykernel==6.29.5
 ipython==8.29.0
 isoduration==20.11.0
@@ -82,6 +83,7 @@ pathspec==0.12.1
 pexpect==4.9.0
 pillow==11.0.0
 platformdirs==4.3.6
+pluggy==1.5.0
 prometheus_client==0.21.0
 prompt_toolkit==3.0.48
 psutil==6.1.0
@@ -94,6 +96,7 @@ pydantic_core==2.23.4
 pyflakes==3.2.0
 Pygments==2.18.0
 pyparsing==3.2.0
+pytest==8.3.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-json-logger==2.0.7
@@ -109,7 +112,6 @@ rpds-py==0.21.0
 scikit-learn==1.5.2
 scipy==1.14.1
 Send2Trash==1.8.3
-setuptools==75.4.0
 simsimd==6.0.5
 six==1.16.0
 sniffio==1.3.1
