--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -1,11 +1,9 @@
-# .github/workflows/flake8.yml
-name: Flake8 Lint
-
+name: Run Pytest
 on:
   push:
 
 jobs:
-  lint:
+  test:
     runs-on: ubuntu-latest
 
     steps:
@@ -23,7 +21,6 @@ jobs:
           source .venv/bin/activate
           pip install -r requirements.txt
 
-      - name: Run Flake8
+      - name: Run tests
         run: |
-          source .venv/bin/activate
-          flake8 .
+          pytest
