--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -21,7 +21,7 @@ jobs:
         run: |
           python -m venv .venv
           source .venv/bin/activate
-          pip install -e
+          pip install -e .
           pip install -r requirements.txt
 
       - name: Run tests
