--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -5,7 +5,7 @@ on:
   push:
 
 jobs:
-  lint:
+  development:
     runs-on: ubuntu-latest
 
     steps:
@@ -26,7 +26,8 @@ jobs:
 
       - name: Run tests
         run: |
-          pytest
+          source .venv/bin/activate
+          pytest tests
 
       - name: Run Flake8
         run: |
