--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -21,7 +21,6 @@ jobs:
         run: |
           python -m venv .venv
           source .venv/bin/activate
-          pip install -e .
           pip install -r requirements.txt
 
       - name: Run tests
@@ -32,4 +31,9 @@ jobs:
       - name: Run Flake8
         run: |
           source .venv/bin/activate
-          flake8 .
+          flake8 -config pyproject.toml leaffliction
+
+      - name: Run Isort
+        run: |
+          source .venv/bin/activate
+          isort leaffliction --settings-path pyproject.toml
