--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -31,9 +31,4 @@ jobs:
       - name: Run Flake8
         run: |
           source .venv/bin/activate
-          flake8 -config pyproject.toml leaffliction
-
-      - name: Run Isort
-        run: |
-          source .venv/bin/activate
-          isort leaffliction --settings-path pyproject.toml
+          flake8 leaffliction  --disable-noqa
