--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -1,14 +1,11 @@
-# .github/workflows/flake8.yml
-name: Flake8 Lint
+# .github/workflows/development.yml
+name: Development pipeline
 
 on:
   push:
-    branches: ["*"]
-  pull_request:
-    branches: ["*"]
 
 jobs:
-  lint:
+  development:
     runs-on: ubuntu-latest
 
     steps:
@@ -18,7 +15,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.x'
+          python-version: '3.10.12'
 
       - name: Install dependencies
         run: |
@@ -26,7 +23,12 @@ jobs:
           source .venv/bin/activate
           pip install -r requirements.txt
 
+      - name: Run tests
+        run: |
+          source .venv/bin/activate
+          pytest tests
+
       - name: Run Flake8
         run: |
           source .venv/bin/activate
-          flake8 .
+          flake8 leaffliction  --disable-noqa
