--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,96 @@
-matplotlib
-numpy
-opencv-python
-pandas
-onnxruntime
-albumentations
-plantcv
-tqdm
-rembg
-flake8
-black
-isort
-pytest
+albucore==0.0.21
+albumentations==1.4.22
+altair==5.5.0
+annotated-types==0.7.0
+attrs==24.2.0
+black==24.10.0
+certifi==2024.8.30
+charset-normalizer==3.4.0
+click==8.1.7
+cloudpickle==3.1.0
+coloredlogs==15.0.1
+contourpy==1.3.1
+cycler==0.12.1
+dask==2024.12.0
+dask-jobqueue==0.9.0
+distributed==2024.12.0
+eval_type_backport==0.2.0
+flake8==7.1.1
+flatbuffers==24.3.25
+fonttools==4.55.2
+fsspec==2024.10.0
+humanfriendly==10.0
+idna==3.10
+imageio==2.36.1
+importlib_metadata==8.5.0
+isort==5.13.2
+Jinja2==3.1.4
+joblib==1.4.2
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+kiwisolver==1.4.7
+lazy_loader==0.4
+llvmlite==0.43.0
+locket==1.0.0
+MarkupSafe==3.0.2
+matplotlib==3.9.3
+mccabe==0.7.0
+mpmath==1.3.0
+msgpack==1.1.0
+mypy-extensions==1.0.0
+narwhals==1.16.0
+networkx==3.4.2
+numba==0.60.0
+numpy==1.26.4
+onnxruntime==1.20.1
+onnxruntime-silicon==1.16.3
+opencv-python==4.10.0.84
+opencv-python-headless==4.10.0.84
+packaging==24.2
+pandas==2.2.3
+partd==1.4.2
+pathspec==0.12.1
+patsy==1.0.1
+pillow==11.0.0
+plantcv==4.5.1
+platformdirs==4.3.6
+pooch==1.8.2
+protobuf==5.29.1
+psutil==6.1.0
+pycodestyle==2.12.1
+pydantic==2.10.3
+pydantic_core==2.27.1
+pyflakes==3.2.0
+PyMatting==1.1.13
+pyparsing==3.2.0
+python-dateutil==2.9.0.post0
+pytz==2024.2
+PyYAML==6.0.2
+referencing==0.35.1
+rembg==2.0.60
+requests==2.32.3
+rpds-py==0.22.3
+scikit-image==0.24.0
+scikit-learn==1.6.0
+scipy==1.14.1
+simsimd==6.2.1
+six==1.17.0
+sortedcontainers==2.4.0
+statsmodels==0.14.4
+stringzilla==3.11.0
+sympy==1.13.3
+tblib==3.0.0
+threadpoolctl==3.5.0
+tifffile==2024.9.20
+tomli==2.2.1
+toolz==1.0.0
+tornado==6.4.2
+tqdm==4.67.1
+typing_extensions==4.12.2
+tzdata==2024.2
+urllib3==2.2.3
+vl-convert-python==1.7.0
+xarray==2024.11.0
+zict==3.0.0
+zipp==3.21.0
 -e .
