--- a/requirements.txt
+++ b/requirements.txt
@@ -15,14 +15,16 @@ dask==2024.12.0
 dask-jobqueue==0.9.0
 distributed==2024.12.0
 eval_type_backport==0.2.0
+exceptiongroup==1.2.2
 flake8==7.1.1
 flatbuffers==24.3.25
-fonttools==4.55.2
+fonttools==4.55.3
 fsspec==2024.10.0
 humanfriendly==10.0
 idna==3.10
 imageio==2.36.1
 importlib_metadata==8.5.0
+iniconfig==2.0.0
 isort==5.13.2
 Jinja2==3.1.4
 joblib==1.4.2
@@ -30,6 +32,7 @@ jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 kiwisolver==1.4.7
 lazy_loader==0.4
+-e .
 llvmlite==0.43.0
 locket==1.0.0
 MarkupSafe==3.0.2
@@ -38,12 +41,11 @@ mccabe==0.7.0
 mpmath==1.3.0
 msgpack==1.1.0
 mypy-extensions==1.0.0
-narwhals==1.16.0
+narwhals==1.17.0
 networkx==3.4.2
 numba==0.60.0
 numpy==1.26.4
 onnxruntime==1.20.1
-onnxruntime-silicon==1.16.3
 opencv-python==4.10.0.84
 opencv-python-headless==4.10.0.84
 packaging==24.2
@@ -54,6 +56,7 @@ patsy==1.0.1
 pillow==11.0.0
 plantcv==4.5.1
 platformdirs==4.3.6
+pluggy==1.5.0
 pooch==1.8.2
 protobuf==5.29.1
 psutil==6.1.0
@@ -63,11 +66,11 @@ pydantic_core==2.27.1
 pyflakes==3.2.0
 PyMatting==1.1.13
 pyparsing==3.2.0
+pytest==8.3.4
 python-dateutil==2.9.0.post0
 pytz==2024.2
 PyYAML==6.0.2
 referencing==0.35.1
-rembg==2.0.60
 requests==2.32.3
 rpds-py==0.22.3
 scikit-image==0.24.0
@@ -93,4 +96,3 @@ vl-convert-python==1.7.0
 xarray==2024.11.0
 zict==3.0.0
 zipp==3.21.0
--e .
