--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ dask==2024.12.0
 dask-jobqueue==0.9.0
 distributed==2024.12.0
 eval_type_backport==0.2.0
+exceptiongroup==1.2.2
 flake8==7.1.1
 flatbuffers==24.3.25
 fonttools==4.55.3
@@ -27,6 +28,7 @@ h5py==3.12.1
 idna==3.10
 imageio==2.36.1
 importlib_metadata==8.5.0
+iniconfig==2.0.0
 isort==5.13.2
 Jinja2==3.1.4
 joblib==1.4.2
@@ -75,6 +77,7 @@ patsy==1.0.1
 pillow==11.0.0
 plantcv==4.5.1
 platformdirs==4.3.6
+pluggy==1.5.0
 protobuf==5.29.1
 psutil==6.1.0
 pycodestyle==2.12.1
@@ -83,6 +86,7 @@ pydantic_core==2.27.1
 pyflakes==3.2.0
 Pygments==2.18.0
 pyparsing==3.2.0
+pytest==8.3.4
 python-dateutil==2.9.0.post0
 pytz==2024.2
 PyYAML==6.0.2
