--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
+absl-py==2.1.0
 albucore==0.0.21
 albumentations==1.4.22
 altair==5.5.0
 annotated-types==0.7.0
+astunparse==1.6.3
 attrs==24.2.0
 black==24.10.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
 click==8.1.7
 cloudpickle==3.1.0
-coloredlogs==15.0.1
 contourpy==1.3.1
 cycler==0.12.1
 dask==2024.12.0
@@ -20,7 +21,10 @@ flake8==7.1.1
 flatbuffers==24.3.25
 fonttools==4.55.3
 fsspec==2024.10.0
-humanfriendly==10.0
+gast==0.6.0
+google-pasta==0.2.0
+grpcio==1.68.1
+h5py==3.12.1
 idna==3.10
 imageio==2.36.1
 importlib_metadata==8.5.0
@@ -30,24 +34,41 @@ Jinja2==3.1.4
 joblib==1.4.2
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
+keras==3.7.0
 kiwisolver==1.4.7
 lazy_loader==0.4
 -e .
-llvmlite==0.43.0
+libclang==18.1.1
 locket==1.0.0
+Markdown==3.7
+markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 matplotlib==3.9.3
 mccabe==0.7.0
-mpmath==1.3.0
+mdurl==0.1.2
+ml-dtypes==0.4.1
 msgpack==1.1.0
 mypy-extensions==1.0.0
+namex==0.0.8
 narwhals==1.17.0
 networkx==3.4.2
-numba==0.60.0
 numpy==1.26.4
-onnxruntime==1.20.1
+nvidia-cublas-cu12==12.5.3.2
+nvidia-cuda-cupti-cu12==12.5.82
+nvidia-cuda-nvcc-cu12==12.5.82
+nvidia-cuda-nvrtc-cu12==12.5.82
+nvidia-cuda-runtime-cu12==12.5.82
+nvidia-cudnn-cu12==9.3.0.75
+nvidia-cufft-cu12==11.2.3.61
+nvidia-curand-cu12==10.3.6.82
+nvidia-cusolver-cu12==11.6.3.83
+nvidia-cusparse-cu12==12.5.1.3
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.5.82
 opencv-python==4.10.0.84
 opencv-python-headless==4.10.0.84
+opt_einsum==3.4.0
+optree==0.13.1
 packaging==24.2
 pandas==2.2.3
 partd==1.4.2
@@ -57,14 +78,13 @@ pillow==11.0.0
 plantcv==4.5.1
 platformdirs==4.3.6
 pluggy==1.5.0
-pooch==1.8.2
 protobuf==5.29.1
 psutil==6.1.0
 pycodestyle==2.12.1
 pydantic==2.10.3
 pydantic_core==2.27.1
 pyflakes==3.2.0
-PyMatting==1.1.13
+Pygments==2.18.0
 pyparsing==3.2.0
 pytest==8.3.4
 python-dateutil==2.9.0.post0
@@ -72,6 +92,7 @@ pytz==2024.2
 PyYAML==6.0.2
 referencing==0.35.1
 requests==2.32.3
+rich==13.9.4
 rpds-py==0.22.3
 scikit-image==0.24.0
 scikit-learn==1.6.0
@@ -80,9 +101,13 @@ simsimd==6.2.1
 six==1.17.0
 sortedcontainers==2.4.0
 statsmodels==0.14.4
-stringzilla==3.11.0
-sympy==1.13.3
+stringzilla==3.11.1
 tblib==3.0.0
+tensorboard==2.18.0
+tensorboard-data-server==0.7.2
+tensorflow==2.18.0
+tensorflow-io-gcs-filesystem==0.37.1
+termcolor==2.5.0
 threadpoolctl==3.5.0
 tifffile==2024.9.20
 tomli==2.2.1
@@ -93,6 +118,8 @@ typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
 vl-convert-python==1.7.0
+Werkzeug==3.1.3
+wrapt==1.17.0
 xarray==2024.11.0
 zict==3.0.0
 zipp==3.21.0
