--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -32,3 +32,15 @@ jobs:
         run: |
           source .venv/bin/activate
           flake8 leaffliction  --disable-noqa
+          
+
+      - name: Build project
+        run: |
+          mkdir output
+          echo "Hello, World!" > output/hello.txt
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: build-artifacts
+          path: output/
