--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -49,4 +49,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: build-artifacts
-          path: data/
+          path: artifact_save/
