--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -23,6 +23,11 @@ jobs:
           source .venv/bin/activate
           pip install -r requirements.txt
 
+  test:
+    runs-on: ubuntu-latest
+    needs: development
+
+    steps:
       - name: Run tests
         run: |
           source .venv/bin/activate
@@ -32,19 +37,54 @@ jobs:
         run: |
           source .venv/bin/activate
           flake8 leaffliction  --disable-noqa
-          
 
-      - name: Build project
+  data:
+    runs-on: ubuntu-latest
+    needs: development
+
+    steps:
+      - name: Import_data
         run: |
           source .venv/bin/activate
           make data
+
+      - name: Improve_dataset
+        run: |
+          source .venv/bin/activate
           mkdir data/processed
-          mkdir data/model
-          mkdir artifact_save
           python leaffliction/tools/improve_dataset.py data/external/images data/processed/augmented/
+
+  train:
+    runs-on: ubuntu-latest
+    needs: [development, data]
+    if: contains(github.event.head_commit.message, '--train_model')
+
+    steps:
+      - name: Train_model
+        run: |
+          source .venv/bin/activate
+          mkdir data/model
           python leaffliction/train.py data/processed/augmented --epoch 20 --plot --save_mode --batch_ratio 0.8 --save_dir data/model
+          
+
+  compress:
+    runs-on: ubuntu-latest
+    needs: development
+
+    steps:
+      - name: Zip_data
+        run: |
+          source .venv/bin/activate
+          mkdir artifact_save
           zip -r artifact_save/data.zip data
 
+
+  save_artifact:
+    runs-on: ubuntu-latest
+    needs: [development, compress]
+    if: contains(github.event.head_commit.message, '--artifact_save')
+
+    steps:
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
