--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -23,11 +23,31 @@ jobs:
           source .venv/bin/activate
           pip install -r requirements.txt
 
+      - name: Package Python environment
+        run: tar -czf python-env.tar.gz .venv
+
+      - name: Upload Python environment artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: python-env
+          path: python-env.tar.gz
+
   test:
     runs-on: ubuntu-latest
     needs: development
 
     steps:
+      - name: Download Python environment artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: python-env
+
+      - name: Extract Python environment
+        run: |
+          tar -xzf python-env.tar.gz
+          source .venv/bin/activate
+          python --version
+
       - name: Run tests
         run: |
           source .venv/bin/activate
@@ -43,6 +63,17 @@ jobs:
     needs: development
 
     steps:
+      - name: Download Python environment artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: python-env
+
+      - name: Extract Python environment
+        run: |
+          tar -xzf python-env.tar.gz
+          source .venv/bin/activate
+          python --version
+
       - name: Import_data
         run: |
           source .venv/bin/activate
@@ -60,6 +91,17 @@ jobs:
     if: contains(github.event.head_commit.message, '--train_model')
 
     steps:
+      - name: Download Python environment artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: python-env
+
+      - name: Extract Python environment
+        run: |
+          tar -xzf python-env.tar.gz
+          source .venv/bin/activate
+          python --version
+
       - name: Train_model
         run: |
           source .venv/bin/activate
@@ -72,6 +114,17 @@ jobs:
     needs: development
 
     steps:
+      - name: Download Python environment artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: python-env
+
+      - name: Extract Python environment
+        run: |
+          tar -xzf python-env.tar.gz
+          source .venv/bin/activate
+          python --version
+
       - name: Zip_data
         run: |
           source .venv/bin/activate
@@ -85,6 +138,17 @@ jobs:
     if: contains(github.event.head_commit.message, '--artifact_save')
 
     steps:
+      - name: Download Python environment artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: python-env
+
+      - name: Extract Python environment
+        run: |
+          tar -xzf python-env.tar.gz
+          source .venv/bin/activate
+          python --version
+  
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
