--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -17,36 +17,42 @@ jobs:
         with:
           python-version: '3.10.12'
 
+      - name: Cache pip dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+
       - name: Install dependencies
         run: |
           python -m venv .venv
           source .venv/bin/activate
           pip install -r requirements.txt
 
-      - name: Package Python environment
-        run: tar -czf python-env.tar.gz .venv
-
-      - name: Upload Python environment artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: python-env
-          path: python-env.tar.gz
+      - name: Save virtual environment
+        run: |
+          cp -r .venv $GITHUB_WORKSPACE/.venv
 
   test:
     runs-on: ubuntu-latest
     needs: development
 
     steps:
-      - name: Download Python environment artifact
-        uses: actions/download-artifact@v3
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
-          name: python-env
+          python-version: '3.9'
 
-      - name: Extract Python environment
+      - name: Restore pip dependencies from cache
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+
+      - name: Restore virtual environment
         run: |
-          tar -xzf python-env.tar.gz
+          cp -r $GITHUB_WORKSPACE/.venv .venv
           source .venv/bin/activate
-          python --version
 
       - name: Run tests
         run: |
@@ -63,16 +69,21 @@ jobs:
     needs: development
 
     steps:
-      - name: Download Python environment artifact
-        uses: actions/download-artifact@v3
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
-          name: python-env
+          python-version: '3.9'
 
-      - name: Extract Python environment
+      - name: Restore pip dependencies from cache
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+
+      - name: Restore virtual environment
         run: |
-          tar -xzf python-env.tar.gz
+          cp -r $GITHUB_WORKSPACE/.venv .venv
           source .venv/bin/activate
-          python --version
 
       - name: Import_data
         run: |
@@ -87,20 +98,25 @@ jobs:
 
   train:
     runs-on: ubuntu-latest
-    needs: [development, data]
+    needs: [data]
     if: contains(github.event.head_commit.message, '--train_model')
 
     steps:
-      - name: Download Python environment artifact
-        uses: actions/download-artifact@v3
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
-          name: python-env
+          python-version: '3.9'
 
-      - name: Extract Python environment
+      - name: Restore pip dependencies from cache
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+
+      - name: Restore virtual environment
         run: |
-          tar -xzf python-env.tar.gz
+          cp -r $GITHUB_WORKSPACE/.venv .venv
           source .venv/bin/activate
-          python --version
 
       - name: Train_model
         run: |
@@ -111,19 +127,24 @@ jobs:
 
   compress:
     runs-on: ubuntu-latest
-    needs: development
+    needs: data
 
     steps:
-      - name: Download Python environment artifact
-        uses: actions/download-artifact@v3
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
-          name: python-env
+          python-version: '3.9'
 
-      - name: Extract Python environment
+      - name: Restore pip dependencies from cache
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+
+      - name: Restore virtual environment
         run: |
-          tar -xzf python-env.tar.gz
+          cp -r $GITHUB_WORKSPACE/.venv .venv
           source .venv/bin/activate
-          python --version
 
       - name: Zip_data
         run: |
@@ -134,21 +155,26 @@ jobs:
 
   save_artifact:
     runs-on: ubuntu-latest
-    needs: [development, compress]
+    needs: [compress]
     if: contains(github.event.head_commit.message, '--artifact_save')
 
     steps:
-      - name: Download Python environment artifact
-        uses: actions/download-artifact@v3
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
-          name: python-env
+          python-version: '3.9'
 
-      - name: Extract Python environment
+      - name: Restore pip dependencies from cache
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+
+      - name: Restore virtual environment
         run: |
-          tar -xzf python-env.tar.gz
+          cp -r $GITHUB_WORKSPACE/.venv .venv
           source .venv/bin/activate
-          python --version
-  
+
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
