--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Save virtual environment
         run: |
-          cp -r .venv $GITHUB_WORKSPACE/.venv
+          cp -r .venv ../venv_cache
 
   test:
     runs-on: ubuntu-latest
@@ -51,7 +51,7 @@ jobs:
 
       - name: Restore virtual environment
         run: |
-          cp -r $GITHUB_WORKSPACE/.venv .venv
+          cp -r ../venv_cache .venv
           source .venv/bin/activate
 
       - name: Run tests
@@ -82,7 +82,7 @@ jobs:
 
       - name: Restore virtual environment
         run: |
-          cp -r $GITHUB_WORKSPACE/.venv .venv
+          cp -r ../venv_cache .venv
           source .venv/bin/activate
 
       - name: Import_data
@@ -115,7 +115,7 @@ jobs:
 
       - name: Restore virtual environment
         run: |
-          cp -r $GITHUB_WORKSPACE/.venv .venv
+          cp -r ../venv_cache .venv
           source .venv/bin/activate
 
       - name: Train_model
@@ -143,7 +143,7 @@ jobs:
 
       - name: Restore virtual environment
         run: |
-          cp -r $GITHUB_WORKSPACE/.venv .venv
+          cp -r ../venv_cache .venv
           source .venv/bin/activate
 
       - name: Zip_data
@@ -172,7 +172,7 @@ jobs:
 
       - name: Restore virtual environment
         run: |
-          cp -r $GITHUB_WORKSPACE/.venv .venv
+          cp -r ../venv_cache .venv
           source .venv/bin/activate
 
       - name: Upload artifacts
