--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -20,7 +20,7 @@ jobs:
       - run: pip install -r requirements.txt
         if: steps.cache-virtualenv.outputs.cache-hit != 'true'
 
-  test:
+  verify:
     runs-on: ubuntu-22.04
     needs: create-virtualenv
 
@@ -30,18 +30,13 @@ jobs:
       - uses: syphar/restore-virtualenv@v1
         id: cache-virtualenv
 
-
-      - name: Run tests
-        run: |
-          pytest tests
-
       - name: Run Flake8
         run: |
           flake8 leaffliction --disable-noqa --config setup.cfg
 
   data:
     runs-on: ubuntu-22.04
-    needs: test
+    needs: verify
 
     steps:
       - uses: actions/checkout@v1
