--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -111,7 +111,7 @@ jobs:
   build_docs:
     runs-on: ubuntu-22.04
     needs: create-virtualenv
-    # if: github.ref == 'refs/heads/develop'
+    if: github.ref == 'refs/heads/development'
 
     steps:
       - uses: actions/checkout@v1
@@ -133,7 +133,7 @@ jobs:
   deploy_docs:
     runs-on: ubuntu-22.04
     needs: build_docs
-    # if: github.ref == 'refs/heads/develop'
+    if: github.ref == 'refs/heads/development'
 
     # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
     permissions:
