--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -5,30 +5,110 @@ on:
   push:
 
 jobs:
-  development:
-    runs-on: ubuntu-latest
+  create-virtualenv:
+    runs-on: ubuntu-22.04
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v1
+      - uses: actions/setup-python@v2
+      - uses: syphar/restore-virtualenv@v1
+        id: cache-virtualenv
 
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.10.12'
+      - uses: syphar/restore-pip-download-cache@v1
+        if: steps.cache-virtualenv.outputs.cache-hit != 'true'
 
-      - name: Install dependencies
-        run: |
-          python -m venv .venv
-          source .venv/bin/activate
-          pip install -r requirements.txt
+      - run: pip install -r requirements.txt
+        if: steps.cache-virtualenv.outputs.cache-hit != 'true'
+
+  test:
+    runs-on: ubuntu-22.04
+    needs: create-virtualenv
+
+    steps:
+      - uses: actions/checkout@v1
+      - uses: actions/setup-python@v2
+      - uses: syphar/restore-virtualenv@v1
+        id: cache-virtualenv
+
 
       - name: Run tests
         run: |
-          source .venv/bin/activate
           pytest tests
 
       - name: Run Flake8
         run: |
-          source .venv/bin/activate
-          flake8 leaffliction  --disable-noqa
+          flake8 leaffliction --disable-noqa --config setup.cfg
+
+  data:
+    runs-on: ubuntu-22.04
+    needs: test
+
+    steps:
+      - uses: actions/checkout@v1
+      - uses: actions/setup-python@v2
+      - uses: syphar/restore-virtualenv@v1
+        id: cache-virtualenv
+
+      - name: Import_data
+        run: |
+          make data
+
+      - name: Improve_dataset
+        run: |
+          mkdir -p data/processed
+          python leaffliction/Balance.py data/external/images data/processed/augmented/ --multiply_factor 3
+
+      - name: Zip_data
+        run: |
+          mkdir -p data_artifact
+          zip -r data_artifact/data.zip data
+
+      - name: push zip and shasum
+        if: ${{ success() }}
+        run: |
+          shasum data_artifact/data.zip > data_artifact/sha.txt
+
+        continue-on-error: true
+
+      - name: Upload data directory
+        uses: actions/upload-artifact@v4
+        with:
+          name: data-artifact
+          path: data_artifact
+
+  train:
+    runs-on: ubuntu-22.04
+    needs: [data]
+    if: contains(github.event.head_commit.message, '--train_model')
+
+    steps:
+      - uses: actions/checkout@v1
+      - uses: actions/setup-python@v2
+      - uses: syphar/restore-virtualenv@v1
+        id: cache-virtualenv
+
+      - name: Download data artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: data-artifact
+          path: data_artifact
+
+      - name: Unzip data artifact
+        run: |
+          unzip data_artifact/data.zip -d data
+
+      - name: Train_model
+        run: |
+          mkdir -p data/model
+          python leaffliction/train.py data/processed/augmented --epoch 20 --plot --save_mode --batch_ratio 0.8 --save_dir data/model
+
+      - name: Zip_data
+        run: |
+          mkdir -p train_artifact
+          zip -r train_artifact/train.zip data
+
+      - name: Upload data directory
+        uses: actions/upload-artifact@v4
+        with:
+          name: train-artifact
+          path: train_artifact
