docs: add docs generation (#16)
* docs: configure pydoctor

* docs: add build docs job

* docs: add docstrings to modules

* refactor: remove dead directories

* style: fix lint issues

* feat: configure docs deployment

* feat: add branch protection for docs jobs + link in readme

* docs: add zip module docstring

--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -20,7 +20,7 @@ jobs:
       - run: pip install -r requirements.txt
         if: steps.cache-virtualenv.outputs.cache-hit != 'true'
 
-  test:
+  verify:
     runs-on: ubuntu-22.04
     needs: create-virtualenv
 
@@ -30,18 +30,13 @@ jobs:
       - uses: syphar/restore-virtualenv@v1
         id: cache-virtualenv
 
-
-      - name: Run tests
-        run: |
-          pytest tests
-
       - name: Run Flake8
         run: |
           flake8 leaffliction --disable-noqa --config setup.cfg
 
   data:
     runs-on: ubuntu-22.04
-    needs: test
+    needs: verify
 
     steps:
       - uses: actions/checkout@v1
@@ -112,3 +107,45 @@ jobs:
         with:
           name: train-artifact
           path: train_artifact
+
+  build_docs:
+    runs-on: ubuntu-22.04
+    needs: create-virtualenv
+    if: github.ref == 'refs/heads/development'
+
+    steps:
+      - uses: actions/checkout@v1
+      - uses: actions/setup-python@v2
+      - uses: syphar/restore-virtualenv@v1
+        id: cache-virtualenv
+
+      - name: Build documentation
+        id: docs_build
+        run: |
+          make build_docs
+
+      - name: Upload documentation as artifact
+        id: docs_artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: apidocs/
+
+  deploy_docs:
+    runs-on: ubuntu-22.04
+    needs: build_docs
+    if: github.ref == 'refs/heads/development'
+
+    # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
+    permissions:
+      pages: write      # to deploy to Pages
+      id-token: write   # to verify the deployment originates from an appropriate source
+
+    # Deploy to the github-pages environment
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4 # or specific "vX.X.X" version tag for this action
